home/logo/button

--- a/index.html
+++ b/index.html
@@ -4,37 +4,50 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--CSS-->
+    <!-- CSS -->
     <link rel="stylesheet" href="css/style.css" />
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <title>DogLife</title>
   </head>
   <body>
     <header id="header">
       <nav class="container">
-        <a class="logo" href="#">DogLife</a>
+        <a class="logo" href="#">Dog<span>Life</span>.</a>
         <div class="menu">menu..</div>
       </nav>
     </header>
 
     <main>
-      <section>
-        <div class="container">
-          <img
-            src="https://images.unsplash.com/photo-1452857297128-d9c29adba80b?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mjd8fGFuaW1hbHxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=60"
-            alt="Imagem principal de coelho"
-          />
-          <h2>
-            Trabalhamos com os melhores produtos do mercado, para levar até você
-            qualidade, conforto e segurança na hora de realizar suas compras.
-          </h2>
-          <p>
-            A DogLife foi constituída por profissionais com mais de 20 anos de
-            experiência em comercio internacional, desenvolvimento de produtos,
-            logística e distribuição. Somos apaixonados por esse mundo animal e
-            estamos prontos para lhe atender e entender suas necessidades!
-          </p>
-          <a href="#">Agenda um horário</a>
+      <section class="section" id="home">
+        <div class="container grid">
+          <div class="image">
+            <img
+              src="https://images.unsplash.com/photo-1452857297128-d9c29adba80b?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mjd8fGFuaW1hbHxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=60"
+              alt="Imagem principal de coelho"
+            />
+          </div>
+          <div class="text">
+            <h1>Trabalhamos com os melhores produtos do mercado.</h1>
+            <p>
+              A DogLife foi constituída por profissionais com mais de 20 anos de
+              experiência em comercio internacional, desenvolvimento de
+              produtos!
+            </p>
+            <a class="button" href="#">Agendar um horário</a>
+          </div>
         </div>
+      </section>
+
+      <div class="divider-1"></div>
+
+      <section class="section">
+        <div id="container">section...</div>
       </section>
     </main>
   </body>
