--- a/index.html
+++ b/index.html
@@ -17,9 +17,19 @@
   </head>
   <body>
     <header id="header">
-      <nav class="container">
+      <nav class="container show">
         <a class="logo" href="#">Dog<span>Life</span>.</a>
-        <div class="menu">menu..</div>
+        <div class="menu">
+          <ul class="grid">
+            <l1><a class="title" href="#home">Home</a></l1>
+            <l1><a class="title" href="#about">About</a></l1>
+            <l1><a class="title" href="#services">Services</a></l1>
+            <l1><a class="title" href="#testimonials">Testimonials</a></l1>
+            <l1><a class="title" href="#contact">Contact</a></l1>
+          </ul>
+        </div>
+        <div class="close">...</div>
+        <div class="close">X</div>
       </nav>
     </header>
 
@@ -33,7 +43,9 @@
             />
           </div>
           <div class="text">
-            <h1>Trabalhamos com os melhores produtos do mercado.</h1>
+            <h2 class="title">
+              Trabalhamos com os melhores produtos do mercado.
+            </h2>
             <p>
               A DogLife foi constituída por profissionais com mais de 20 anos de
               experiência em comercio internacional, desenvolvimento de
@@ -46,8 +58,12 @@
 
       <div class="divider-1"></div>
 
-      <section class="section">
-        <div id="container">section...</div>
+      <section class="section" id="about">
+        <div class="container grid">Sobre</div>
+      </section>
+
+      <section class="section" id="services">
+        <div class="container grid">Services</div>
       </section>
     </main>
   </body>
