--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css" />
     <!-- Fonts -->
+    <link rel="stylesheet" href="assets/fonts/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,7 +18,7 @@
   </head>
   <body>
     <header id="header">
-      <nav class="container show">
+      <nav class="container">
         <a class="logo" href="#">Dog<span>Life</span>.</a>
         <div class="menu">
           <ul class="grid">
@@ -28,8 +29,8 @@
             <l1><a class="title" href="#contact">Contact</a></l1>
           </ul>
         </div>
-        <div class="close">...</div>
-        <div class="close">X</div>
+        <div class="toggle icon-menu"></div>
+        <div class="toggle icon-close"></div>
       </nav>
     </header>
 
@@ -66,5 +67,7 @@
         <div class="container grid">Services</div>
       </section>
     </main>
+
+    <script src="main.js"></script>
   </body>
 </html>
