--- a/index.html
+++ b/index.html
@@ -20,15 +20,17 @@
     <header id="header">
       <nav class="container">
         <a class="logo" href="#">Dog<span>Life</span>.</a>
+        <!-- menu -->
         <div class="menu">
           <ul class="grid">
-            <l1><a class="title" href="#home">Home</a></l1>
-            <l1><a class="title" href="#about">About</a></l1>
-            <l1><a class="title" href="#services">Services</a></l1>
-            <l1><a class="title" href="#testimonials">Testimonials</a></l1>
-            <l1><a class="title" href="#contact">Contact</a></l1>
+            <li><a class="title" href="#home">Início</a></li>
+            <li><a class="title" href="#about">Sobre</a></li>
+            <li><a class="title" href="#services">Serviços</a></li>
+            <li><a class="title" href="#testimonials">Depoimentos</a></li>
+            <li><a class="title" href="#contact">Contato</a></li>
           </ul>
         </div>
+        <!-- /menu -->
         <div class="toggle icon-menu"></div>
         <div class="toggle icon-close"></div>
       </nav>
@@ -39,8 +41,8 @@
         <div class="container grid">
           <div class="image">
             <img
-              src="https://images.unsplash.com/photo-1452857297128-d9c29adba80b?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mjd8fGFuaW1hbHxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=60"
-              alt="Imagem principal de coelho"
+              src="https://images.unsplash.com/photo-1527526029430-319f10814151?ixid=MnwxMjA3fDB8MHxzZWFyY2h8OTd8fHBldHxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=60"
+              alt="Imagem principal cachorro"
             />
           </div>
           <div class="text">
@@ -48,9 +50,7 @@
               Trabalhamos com os melhores produtos do mercado.
             </h2>
             <p>
-              A DogLife foi constituída por profissionais com mais de 20 anos de
-              experiência em comercio internacional, desenvolvimento de
-              produtos!
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad unde quasi assumenda maxime incidunt sed excepturi nemo, explicabo laboriosam provident quaerat placeat.
             </p>
             <a class="button" href="#">Agendar um horário</a>
           </div>
@@ -60,11 +60,60 @@
       <div class="divider-1"></div>
 
       <section class="section" id="about">
-        <div class="container grid">Sobre</div>
+        <div class="container grid">
+          <div class="image">
+            <img src="https://images.unsplash.com/photo-1592468257342-8375cb556a69?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTB8fHBldCUyMGZvb2R8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=60" alt="Cachorro se alimentando com biscoito">
+          </div>
+          <div class="text">
+            <h2 class="title">Sobre nós</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate
+              cum cumque, rem quis hic mollitia quos eaque placeat soluta sint
+              fugiat perferendis, corrupti autem qui perspiciatis in accusamus
+              tempore. Pariatur!
+            </p></br>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
+              culpa, repudiandae incidunt in distinctio debitis nisi ad vel,
+              dolorum exercitationem pariatur quam. Quam illum officiis non
+              quibusdam ipsam obcaecati velit!
+            </p></br>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
+              doloribus et reprehenderit suscipit veritatis asperiores quas
+              vitae doloremque. Rerum necessitatibus illo ad sapiente ea minus
+              tenetur, repellat soluta illum quis!
+            </p>
+          </div>
+        </div>
       </section>
 
+      <div class="divider-2"></div>
+
       <section class="section" id="services">
-        <div class="container grid">Services</div>
+        <div class="container grid">
+          <header>
+            <h2 class="title">Serviços</h2>
+            <p>Com mais de 10 anos no mercado, a <strong>DogLife</strong> já conquistou clientes de inúmeros países com seus tratamentos exclusivos.</p>
+          </header>
+          <div class="cards">
+            <div class="card">
+              <div class="icon-racao"></div>
+              <h3 class="title">Alimentação</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, dolores eaque optio nam ad perspiciatis architecto veniam. Repudiandae eos, ipsam quibusdam, perspiciatis minus ad voluptatem sunt cum minima, repellendus nisi.</p>
+            </div>
+            <div class="card">
+              <div class="icon-pote"></div>
+              <h3 class="title">Banho e Tosa</h3>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non, corporis, officiis porro nisi atque deserunt quae, neque ab ut maiores obcaecati consequuntur. Quod dolore inventore pariatur asperiores fuga, dolorem voluptas.</p>
+            </div>
+            <div class="card">
+              <div class="icon-dog"></div>
+              <h3 class="title">Lorem</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, ducimus, expedita quibusdam sequi doloribus omnis nobis numquam officiis quod deserunt voluptatibus perferendis illo veniam temporibus repellat ullam saepe, fugiat similique?</p>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
 
