smooth scroll/ header scroll/ services

--- a/index.html
+++ b/index.html
@@ -96,19 +96,19 @@
             <h2 class="title">Serviços</h2>
             <p>Com mais de 10 anos no mercado, a <strong>DogLife</strong> já conquistou clientes de inúmeros países com seus tratamentos exclusivos.</p>
           </header>
-          <div class="cards">
+          <div class="cards grid">
             <div class="card">
-              <div class="icon-racao"></div>
-              <h3 class="title">Alimentação</h3>
+              <i class="icon-racao"></i>
+              <h3 class="title">Lorem</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, dolores eaque optio nam ad perspiciatis architecto veniam. Repudiandae eos, ipsam quibusdam, perspiciatis minus ad voluptatem sunt cum minima, repellendus nisi.</p>
             </div>
             <div class="card">
-              <div class="icon-pote"></div>
-              <h3 class="title">Banho e Tosa</h3>
+              <i class="icon-pote"></i>
+              <h3 class="title">Lorem</h3>
               <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non, corporis, officiis porro nisi atque deserunt quae, neque ab ut maiores obcaecati consequuntur. Quod dolore inventore pariatur asperiores fuga, dolorem voluptas.</p>
             </div>
             <div class="card">
-              <div class="icon-dog"></div>
+              <i class="icon-dog"></i>
               <h3 class="title">Lorem</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, ducimus, expedita quibusdam sequi doloribus omnis nobis numquam officiis quod deserunt voluptatibus perferendis illo veniam temporibus repellat ullam saepe, fugiat similique?</p>
             </div>
