--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Icons -->
+    <link rel="stylesheet" href="assets/fonts/style.css" />
+
+    <!--SwiperJS-->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css" />
-    <!-- Fonts -->
-    <link rel="stylesheet" href="assets/fonts/style.css" />
+
+    <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -37,6 +44,7 @@
     </header>
 
     <main>
+      <!--HOME-->
       <section class="section" id="home">
         <div class="container grid">
           <div class="image">
@@ -59,6 +67,7 @@
 
       <div class="divider-1"></div>
 
+      <!--ABOUT-->
       <section class="section" id="about">
         <div class="container grid">
           <div class="image">
@@ -90,6 +99,7 @@
 
       <div class="divider-2"></div>
 
+      <!--SERVICES-->
       <section class="section" id="services">
         <div class="container grid">
           <header>
@@ -115,8 +125,71 @@
           </div>
         </div>
       </section>
-    </main>
 
+      <div class="divider-1"></div>
+
+      <!--TESTIMONIALS-->
+      <section class="section" id="testimonials">
+        <div class="container">
+          <header>
+            <h2 class="title">Depoimentos de quem já passou por aqui</h2>
+          </header>
+          <div class="testimonials swiper-container">
+            <div class="swiper-wrapper">
+
+            <div class="testimonial swiper-slide">
+              <blockquote>
+                <p>
+                  <span>&ldquo;</span>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. In officia corporis provident omnis.
+                </p>
+                <cite>
+                  <img src="https://randomuser.me/api/portraits/women/89.jpg" alt="Foto de Wanessa Souza">
+                  Wanessa Souza
+                </cite>
+              </blockquote>
+            </div>
+
+            <div class="testimonial swiper-slide">
+              <blockquote>
+                <p>
+                  <span>&ldquo;</span>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. In officia corporis provident omnis.
+                </p>
+                <cite>
+                  <img src="https://randomuser.me/api/portraits/women/31.jpg" alt="Foto de Patrick Schulz">
+                  Patrick Schulz
+                </cite>
+              </blockquote>
+            </div>
+
+            <div class="testimonial swiper-slide">
+              <blockquote>
+                <p>
+                  <span>&ldquo;</span>
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. In officia corporis provident omnis.
+                </p>
+                <cite>
+                  <img src="https://randomuser.me/api/portraits/men/39.jpg" alt="Foto de Kelly Shak">
+                  Kelly Shak
+                </cite>
+              </blockquote>
+            </div>
+
+          </div>
+
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+          </div>
+        </div>
+      </section>
+
+      <!--CONTACT-->
+    </main>
+    <!--SwiperJS-->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+    <!--main.js-->
     <script src="main.js"></script>
   </body>
 </html>
