--- a/index.html
+++ b/index.html
@@ -184,12 +184,39 @@
         </div>
       </section>
 
+      <div class="divider-2"></div>
+
       <!--CONTACT-->
+      <section class="section" id="contact">
+        <div class="container grid">
+
+          <div class="text">
+            <h2 class="title">Entre em contato com a gente</h2>
+            <p>Entre em contato com a DogLife, queremos tirar suas dúvidas, ouvir suas criticas e sugestões.</p>
+            <a href="https://api.whatsapp.com/send?phone=+551199999999&text=Hello, how are you?" 
+            class="button" 
+            target="_blank"
+            ><i class="icon-whatsapp"> Entrar em contato</i></a>
+          </div>
+
+          <div class="links">
+            <ul class="grid">
+              <li><i class="icon-phone"> (11) 9999-999</i></li>
+              <li><i class="icon-map-pin"> Av. Paulista, 137</i></li>
+              <li><i class="icon-mail"> contato@doglife.com</i></li>
+            </ul>
+          </div>
+
+        </div>
+      </section>
     </main>
-    <!--SwiperJS-->
+    <!-- swiper -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
-    <!--main.js-->
+    <!-- scrollreveal -->
+    <script src="https://unpkg.com/scrollreveal"></script>
+
+    <!-- main.js -->
     <script src="main.js"></script>
   </body>
 </html>
