--- a/index.html
+++ b/index.html
@@ -209,7 +209,40 @@
 
         </div>
       </section>
+
+      <div class="divider-1"></div>
     </main>
+
+    <!--FOOTER-->
+    <footer class="section">
+      <div class="container grid">
+        <div class="brand">
+          <a class="logo logo-alt" href="#home">Dog<span>Life</span>.</a>
+          <p>&copy; 2021 DogLife.</p>
+          <p>Todos os direitos reservados.</p>
+        </div>
+
+        <div class="social">
+          <a href="https://instagram.com" target="_blank">
+            <i class="icon-instagram"></i>
+          </a>
+          <a href="https://facebook.com" target="_blank">
+            <i class="icon-facebook"></i></a>
+          <a href="https://youtube.com" target="_blank">
+            <i class="icon-youtube"></i></a>
+        </div>
+      </div>
+    </footer>
+
+    <a href="#home" class="back-to-top"><i class="icon-arrow-up"></i></a>
+
+
+
+
+
+
+
+
     <!-- swiper -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
