--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
           </div>
           <div class="text">
             <h2 class="title">
-              Trabalhamos com os melhores produtos do mercado.
+              Tudo para seu Pet &#10083;
             </h2>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad unde quasi assumenda maxime incidunt sed excepturi nemo, explicabo laboriosam provident quaerat placeat.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad unde quasi assumenda maxime incidunt sed excepturi.
             </p>
             <a class="button" href="#">Agendar um horário</a>
           </div>
@@ -104,7 +104,7 @@
         <div class="container grid">
           <header>
             <h2 class="title">Serviços</h2>
-            <p>Com mais de 10 anos no mercado, a <strong>DogLife</strong> já conquistou clientes de inúmeros países com seus tratamentos exclusivos.</p>
+            <p class="subtitle">Com mais de 10 anos no mercado, a <strong>DogLife</strong> já conquistou clientes de inúmeros países com seus tratamentos exclusivos.</p>
           </header>
           <div class="cards grid">
             <div class="card">
